--- a/facetag.ipynb
+++ b/facetag.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
        "4           Fraud  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +454,7 @@
        "4999           KA37AB3456           Fraud  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +606,7 @@
        "max       5000.000000           350.00000   350.000000     118.000000"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +628,7 @@
        "(5000, 13)"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +649,7 @@
        "65000"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +674,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +708,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +762,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +796,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1003,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1027,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1037,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1069,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1092,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1109,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1119,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1138,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1185,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1195,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1219,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1238,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1265,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1307,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1317,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1351,7 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1393,10 +1393,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1553549735.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[41], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    https://github.com/Olutola-Oluwatobi-Solomon/facetag-detection-\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "https://github.com/Olutola-Oluwatobi-Solomon/facetag-detection-"
+   ]
   },
   {
    "cell_type": "code",
